NEW IN WAF 1.7.1
----------------
* Updated the exclusion regexps for "waf dist"
* Added an example in playground/nasm

NEW IN WAF 1.7.0
----------------
* The compat15 tool is disabled by default (the README file explains how to enable it)
* Python >= 2.4 is now required
* Python >= 2.6 is required for creating the Waf file in the source tree
* Added Utils.writef (similar to Utils.readf)
* Added Node.evict() to provide more control over invalid references
* Do not raise exception on --help when running on python 2.4
* Node.search -> Node.search_node (consistent with make_node and find_node)
* Errors are reported on configuration test failures with execute=True #1111
* Added header prefixing (autoconf-like) #1117
* Removed the warnings on "waf install" #1120
* Extended bld.subst() to perform simple copies to the build directory
* Removed the default DLL_EXPORT define on gcc/g++ shared libraries
* Calling ctx.root.ant_glob(abspath) will now return results #1135
* New case-insentive option for ant_glob #1148
* Ported demos/asm to 64-bit, forcing gcc over as
* Updated the gccdeps tool #1162
* Improved the C# processing #1154, #1153
* Removed the empty flags from LIB/INCLUDE in the msvc configuration #1159
* Added an 'encoding' parameter to bld.subst()
* Detect Visual Studio 2011 beta
* Detect cython dependencies of the form "from module import x" #1044
* Use the cython includes in the dependency scanner #1166
* Improved the behaviour of Utils.readf/Utils.writef on Win32
* Made Task.__repr__ more robust #1174
* Fixed the gcc builds on hp-ux
* Let gccdeps work with other compilers #1179

NEW IN WAF 1.6.11
-----------------
* Enable custom variables for the boost detection #1089
* Disable the config test execution when detecting boost #1090
* Process moc classes in .cpp files by default #1095
* Apply the chmod attribute to the versioned libraries (vnum) #1097
* Fixed the python detection on OSX #1098
* Changed the win32 color settings for Windows 7 #1099